# time-traveler

./: .env.example  .gitignore  RAILWAY_VERCEL_CONNECTION_PLAN.md  README.md  SIMPLIFIED-RANDOMIZATION.md  package.json  pyproject.toml  repo-structure.md  requirements.txt  todo.md
apps/server/: .env.example  AGENT_SETUP.md  ERA_CONFIG.md  README.md  SIMPLIFIED-RANDOMIZATION.md  SYSTEM_PROMPT_TEMPLATE.txt  auth.py  era_config.py  errors.py  main.py  pyproject.toml  rate_limiting.py  requirements.txt  test.py  twilio_audio.py
apps/server/metrics/: README.md  latency-ui.json  latency.ndjson
apps/server/metrics/snapshots/: main.latency.py  twilio_audio.latency.py
apps/server/shared_py/: agent_manager.py  pyproject.toml
apps/server/shared_py/data/: agents.json  first_messages.json  voices.json
apps/web/: README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: CountryPhoneInput.tsx  LanguageToggle.tsx  YearSlider.tsx
infra/deployment/: README.md
infra/twilio/: README.md
infra/vercel/: DEPLOYMENT_GUIDE.md
tests/: conftest.py  test_agent_manager.py  test_era_config.py  test_rate_limiting.py  test_voice_manager.py
