[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-py"
version = "0.1.0"
description = "Shared Python utilities for Time Traveler"
authors = [{name = "dan1dr", email = "dannieyo@gmail.com"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
